10-1-2009: Cache image thumbnails in AbstractMediaButton and PlayPauseButton, see #1809